--- a/style.css
+++ b/style.css
@@ -3,20 +3,39 @@
 body {
     margin: 0px;
     padding: 0px;
+}
+header {
+    margin: 0px;
+    padding: 0px;
+    height: 100vh;
+    width: 100%;
     background-image: url(./bricks.jpeg);
     background-size: cover;
+    background-position: center;
     font-family: 'Yellowtail', cursive;
+}
+.pink-screen {
+    width: 100%;
+    height: 100vh;
+    background: #fe3a80;
+    opacity: .05;
+}
+.sign {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .neon-sign {
     margin: 0px;
     padding: 0px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-4deg);
+    position: relative;
     font-size: 120px;
     color: white;
     text-shadow: 0 0 20px #ff005b;
+    display: inline-block;
 }
  .neon-sign::after {
     content: attr(data-text);
@@ -38,4 +57,8 @@ body {
     z-index: -2;
     opacity: 0.5;
     filter: blur(40px);
-} 
+}
+.divider {
+    width: 10px;
+    height: 100%;
+}
