--- a/style.css
+++ b/style.css
@@ -36,29 +36,111 @@ header {
     color: white;
     text-shadow: 0 0 20px #ff005b;
     display: inline-block;
+    animation: flicker 10s linear infinite;
 }
  .neon-sign::after {
+    display: block;
     content: attr(data-text);
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
-    color: #ff005b;
-    filter: blur(15px);
+    color: #ff005b; 
+    filter: blur(0px);
 }
 .neon-sign::before {
+    display: block;
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: #fe3a80;
+    background: #fe3a80; 
     z-index: -2;
-    opacity: 0.5;
+    opacity: .5;
     filter: blur(40px);
 }
-.divider {
-    width: 10px;
-    height: 100%;
+
+@keyframes flicker {
+    0% {
+        color: white;
+        opacity: 1;
+        text-shadow: 0 0 20px #ff005b;
+    }
+    67% {
+        color: white;
+        opacity: 1; 
+        text-shadow: 0 0 20px #ff005b;
+    }
+    68% {
+        color: black;
+        opacity: 0.2;         
+        text-shadow: 0 0 0px transparent;        
+    }
+    68.5%{
+        color: white;
+        opacity: 1;         
+        text-shadow: 0 0 20px #ff005b;
+    }
+    69.5% {
+        color: white;
+        opacity: 1; 
+        text-shadow: 0 0 20px #ff005b;
+    }
+    70% {
+        color: black;
+        opacity: 0;
+        text-shadow: 0 0 0px transparent;
+    }
+    70.5% {
+        color: white;
+        opacity: 1;
+        text-shadow: 0 0 20px #ff005b;
+    }
+    71% {
+        color: white;
+        opacity: 1;
+        text-shadow: 0 0 20px #ff005b;
+    }
+    71.5% {
+        color: black;
+        opacity: 0.2;
+        text-shadow: 0 0 0px transparent;
+    }
+    74% {
+        color: black;
+        opacity: 0.2;        
+        text-shadow: 0 0 0px transparent;
+    }
+    74.5% {
+        color: white;
+        opacity: 1;
+        text-shadow: 0 0 20px #ff005b;
+    }
+    100% {
+        color: white;
+        opacity: 1;
+        text-shadow: 0 0 20px #ff005b;
+    }
+}
+@keyframes glow-off {
+    0% {
+        display: block;
+    }
+    71% {
+        display: block;
+    }
+    71.5% {
+        display: none;
+    }
+    74% {
+        display: none;
+    }
+    74.5% {
+        display: block;
+    }
+    100% {
+        display: block;
+    }
 }
