--- a/style.css
+++ b/style.css
@@ -9,14 +9,25 @@ header {
     padding: 0px;
     height: 100vh;
     width: 100%;
+    font-family: 'Yellowtail', cursive;
+    position: relative;
+}
+.background {
+    margin: 0px;
+    padding: 0px;
+    height: 100%;
+    width: 100%;
     background-image: url(./bricks.jpeg);
     background-size: cover;
     background-position: center;
-    font-family: 'Yellowtail', cursive;
+    filter: blur(1px);
 }
 .pink-screen {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #fe3a80;
     opacity: .05;
 }
@@ -122,25 +133,5 @@ header {
         color: white;
         opacity: 1;
         text-shadow: 0 0 20px #ff005b;
-    }
-}
-@keyframes glow-off {
-    0% {
-        display: block;
-    }
-    71% {
-        display: block;
-    }
-    71.5% {
-        display: none;
-    }
-    74% {
-        display: none;
-    }
-    74.5% {
-        display: block;
-    }
-    100% {
-        display: block;
     }
 }
